--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -108,231 +108,163 @@
                   <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
                 </ul>
               </div>
+              <!-- 페이지 1 -->
               <div class="resev-page" data-page="1">
-                <div class="res1">
+                <div class="res-card">
                   <ul>
-                    <li>호텔링</li>
-                    <li>예약 확정</li>
+                    <li class="type">호텔링</li>
+                    <li class="status">예약 확정</li>
                   </ul>
-                  <div class="schedule1">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
                     <span>2025-05-12 ~ 2025-05-15</span>
                   </div>
-                  <div class="na1">OOO시터</div>
-                  <div class="price1">120,000원</div>
-                  <div class="chart1">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter1">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view1">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">120,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
-                <div class="res2">
+                <div class="res-card">
                   <ul>
-                    <li>산책</li>
-                    <li>예약 확정</li>
+                    <li class="type">산책</li>
+                    <li class="status">예약 확정</li>
                   </ul>
-                  <div class="schedule2">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-06-01</span>
                   </div>
-                  <div class="na2">OOO시터</div>
-                  <div class="price2">25,000원</div>
-                  <div class="chart2">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter2">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view2">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">25,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
               </div>
+              <!-- 페이지 2 -->
               <div class="resev-page" data-page="2">
-                <div class="res1">
+                <div class="res-card">
                   <ul>
-                    <li>호텔링</li>
-                    <li>예약 확정</li>
+                    <li class="type">호텔링</li>
+                    <li class="status">예약 대기</li>
                   </ul>
-                  <div class="schedule1">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-06-10 ~ 2025-06-13</span>
                   </div>
-                  <div class="na1">OOO시터</div>
-                  <div class="price1">120,000원</div>
-                  <div class="chart1">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter1">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view1">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">150,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
-                <div class="res2">
+                <div class="res-card">
                   <ul>
-                    <li>산책</li>
-                    <li>예약 확정</li>
+                    <li class="type">산책</li>
+                    <li class="status">예약 완료</li>
                   </ul>
-                  <div class="schedule2">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-07-01</span>
                   </div>
-                  <div class="na2">OOO시터</div>
-                  <div class="price2">25,000원</div>
-                  <div class="chart2">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter2">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view2">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">30,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
               </div>
+              <!-- 페이지 3 -->
               <div class="resev-page" data-page="3">
-                <div class="res1">
+                <div class="res-card">
                   <ul>
-                    <li>호텔링</li>
-                    <li>예약 확정</li>
+                    <li class="type">호텔링</li>
+                    <li class="status">예약 취소</li>
                   </ul>
-                  <div class="schedule1">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-07-15 ~ 2025-07-17</span>
                   </div>
-                  <div class="na1">OOO시터</div>
-                  <div class="price1">120,000원</div>
-                  <div class="chart1">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter1">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view1">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">0원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
-                <div class="res2">
+                <div class="res-card">
                   <ul>
-                    <li>산책</li>
-                    <li>예약 확정</li>
+                    <li class="type">산책</li>
+                    <li class="status">예약 확정</li>
                   </ul>
-                  <div class="schedule2">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-08-01</span>
                   </div>
-                  <div class="na2">OOO시터</div>
-                  <div class="price2">25,000원</div>
-                  <div class="chart2">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter2">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view2">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">28,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
               </div>
+              <!-- 페이지 4 -->
               <div class="resev-page" data-page="4">
-                <div class="res1">
+                <div class="res-card">
                   <ul>
-                    <li>호텔링</li>
-                    <li>예약 확정</li>
+                    <li class="type">호텔링</li>
+                    <li class="status">이용 완료</li>
                   </ul>
-                  <div class="schedule1">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-08-10 ~ 2025-08-13</span>
                   </div>
-                  <div class="na1">OOO시터</div>
-                  <div class="price1">120,000원</div>
-                  <div class="chart1">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter1">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view1">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">170,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
-                <div class="res2">
+                <div class="res-card">
                   <ul>
-                    <li>산책</li>
-                    <li>예약 확정</li>
+                    <li class="type">산책</li>
+                    <li class="status">예약 확정</li>
                   </ul>
-                  <div class="schedule2">
-                    <span
-                      class="material-symbols-outlined"
-                      style="font-size: 15px"
+                  <div class="schedule">
+                    <span class="material-symbols-outlined"
+                      >calendar_today</span
                     >
-                      calendar_today
-                    </span>
-                    <span>2025-05-12 ~ 2025-05-15</span>
+                    <span>2025-08-15</span>
                   </div>
-                  <div class="na2">OOO시터</div>
-                  <div class="price2">25,000원</div>
-                  <div class="chart2">
-                    <!-- 모달 버튼 -->
-                    <button class="openChatBtn" data-sitter="sitter2">
-                      채팅
-                    </button>
-                  </div>
-                  <div class="view2">
-                    <!-- 모달 버튼 -->
-                    <button class="modal-btn" data-type="view2">상세보기</button>
+                  <div class="sit">OOO시터</div>
+                  <div class="price">26,000원</div>
+                  <div class="actions">
+                    <button class="openChatBtn">채팅</button>
+                    <button class="modal-btn">상세보기</button>
                   </div>
                 </div>
               </div>
-              <!-- pagenation part -->
+              <!-- 페이지네이션 -->
               <div class="allres">
                 <button class="left material-symbols-outlined">
                   chevron_left
@@ -341,6 +273,7 @@
                   <li><button class="page-btn">1</button></li>
                   <li><button class="page-btn">2</button></li>
                   <li><button class="page-btn">3</button></li>
+                  <li><button class="page-btn">4</button></li>
                 </ul>
                 <button class="right material-symbols-outlined">
                   chevron_right
