--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -92,7 +92,7 @@
               </div>
               <div class="btn">
                 <div class="pro-setting">
-                  <a href="/html/mypage/ownerprofile.html">프로필 관리</a>
+                  <a href="./ownerprofile.html">프로필 관리</a>
                 </div>
                 <div class="pay-amount">
                   <!-- 모달 버튼 -->
@@ -357,7 +357,7 @@
                   </div>
                 </div>
                 <div class="res3">
-                  <a href="javascript:void(0)">새 예약하기</a>
+                  <a href="../reserve/reserve.html">새 예약하기</a>
                 </div>
               </div>
             </div>
