--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -86,7 +86,7 @@
               </div>
               <div class="btn">
                 <div class="pro-setting">
-                  <a href="/html/mypage/sitterprofile.html">프로필 관리</a>
+                  <a href="./sitterprofile.html">프로필 관리</a>
                 </div>
                 <div class="pay-amount">
                   <!-- 모달 버튼 -->
