--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -125,7 +125,7 @@
                   <div class="price">120,000원</div>
                   <div class="actions">
                     <button class="openChatBtn">채팅</button>
-                    <button class="modal-btn">상세보기</button>
+                    <button class="modal-btn" data-type="view1">상세보기</button>
                   </div>
                 </div>
                 <div class="res-card">
@@ -143,7 +143,7 @@
                   <div class="price">25,000원</div>
                   <div class="actions">
                     <button class="openChatBtn">채팅</button>
-                    <button class="modal-btn">상세보기</button>
+                    <button class="modal-btn" data-type="view2">상세보기</button>
                   </div>
                 </div>
               </div>
