--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -44,10 +44,10 @@
         </div>
         <div class="sign">
           <button class="sign-in btn">
-            <a href="/html/sign/login.html">로그인</a>
+            <a href="../sign/login.html">로그인</a>
           </button>
           <button class="sign-up btn">
-            <a href="/html/sign/signup.html">회원가입</a>
+            <a href="../sign/signup.html">회원가입</a>
           </button>
         </div>
       </div>
