--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -125,7 +125,9 @@
                   <div class="price">120,000원</div>
                   <div class="actions">
                     <button class="openChatBtn">채팅</button>
-                    <button class="modal-btn" data-type="view1">상세보기</button>
+                    <button class="modal-btn" data-type="view1">
+                      상세보기
+                    </button>
                   </div>
                 </div>
                 <div class="res-card">
@@ -143,7 +145,9 @@
                   <div class="price">25,000원</div>
                   <div class="actions">
                     <button class="openChatBtn">채팅</button>
-                    <button class="modal-btn" data-type="view2">상세보기</button>
+                    <button class="modal-btn" data-type="view2">
+                      상세보기
+                    </button>
                   </div>
                 </div>
               </div>
@@ -289,7 +293,7 @@
                     <li>등록된 반려동물 정보입니다.</li>
                   </ul>
                   <div class="care">
-                    <a href="javascript:void(0)">관리</a>
+                    <a href="./petpage.html">관리</a>
                   </div>
                   <div class="pro1">
                     <img src="../../asset/dog1.jpg" alt="" />
@@ -331,7 +335,7 @@
                   <div class="chat1">
                     <!-- 모달 버튼 -->
                     <button class="openChatBtn" data-sitter="sitter3">
-                      채팅
+                      후기남기기
                     </button>
                   </div>
                 </div>
@@ -352,7 +356,7 @@
                   <div class="chat2">
                     <!-- 모달 버튼 -->
                     <button class="openChatBtn" data-sitter="sitter4">
-                      채팅
+                      후기남기기
                     </button>
                   </div>
                 </div>
