pet entity 완료, 예약 / 결제 처리중

--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -289,7 +289,7 @@
                     <li>등록된 반려동물 정보입니다.</li>
                   </ul>
                   <div class="care">
-                    <a href="javascript:void(0)">관리</a>
+                    <button class="modal-btn" data-type="petInfo">관리</button>
                   </div>
                   <div class="pro1">
                     <img src="../../asset/dog1.jpg" alt="" />
